# rust_logging_tool

./: Cargo.toml  config.json  documentation
commons/: Cargo.toml
consumer-lib/: Cargo.toml
consumer-lib/src/: lib.rs
dal-layer/: Cargo.toml
dal-layer/src/: lib.rs
dal-layer/src/models/: details.rs  log_model.rs  mod.rs  my_service_model.rs
dal-layer/src/repository/: db.rs
dal-layer/src/utils/: mod.rs
producer-lib/: Cargo.toml
producer-lib/src/: lib.rs
rust-log-collector/: Cargo.toml
rust-log-collector/src/: lib.rs  main.rs
rust-tooling-api/: Cargo.toml
rust-tooling-api/src/: main.rs
rust-tooling-api/src/models/: log_model.rs  mod.rs  my_service_model.rs
rust-tooling-api/src/routes/: health_check.rs  log_routes.rs  mod.rs  myservice_routes.rs
rust-tooling-api/src/services/: db.rs
rust-tooling-api/src/utils/: date_helper.rs
