[package]
name = "rust-log-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
dal-layer = { path = "../dal-layer"}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.42"
notify = "8.2.0"
log = "0.4.29"
env_logger = "0.11.8"
ctrlc = "3.5.1"
thiserror = {version="2.0.17"}
tokio = "1.49.0"
